# CD-MediaPlayer

./: CMakeLists.txt  README.md  main  main.c  sign.txt
include/: colors.h  keys.h  start.h  vlc_cont.h
src/: main.c  start.c  vlc_cont.c
